[package]
name = "redis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.28", features = ["derive"] }
nom = "7.1.3"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
